@@ -1,7 +1,3 @@
-AUX 5.5/startscript.sh 421 RMD160 6494dc2a8d810d37f9eea36b4cf759aea8ec92d9 SHA1 2b15c71af3e585e57ecc3712144205ae5119a016 SHA256 dfd619a0a71b28e17facb015e8d4be79c495361f29e97da4cf55ced7f3f87b5f
-MD5 06cb85e3af52ad431914dd95f3ed4eff files/5.5/startscript.sh 421
-RMD160 6494dc2a8d810d37f9eea36b4cf759aea8ec92d9 files/5.5/startscript.sh 421
-SHA256 dfd619a0a71b28e17facb015e8d4be79c495361f29e97da4cf55ced7f3f87b5f files/5.5/startscript.sh 421
 AUX 6.0/config.sh 8352 RMD160 e68f4fb500e036554df40993ce6231fcf7a1c1dc SHA1 afe3c39d6a9e3c47225eb2159003453814349247 SHA256 cd39177f331818f0b8920a70fb35e1b2f70505f6a2a48301318ab6f6cea4fac3
 MD5 5950d9f0792aaf6273b86bb67a3e5478 files/6.0/config.sh 8352
 RMD160 e68f4fb500e036554df40993ce6231fcf7a1c1dc files/6.0/config.sh 8352
@@ -18,15 +14,9 @@ AUX emptyunscramble.xsl 405 RMD160 8981ca79c9d05840906fe6070b048db88fcd955a SHA1
 MD5 a80b4daebbce9c3aa54890ab458f8ecd files/emptyunscramble.xsl 405
 RMD160 8981ca79c9d05840906fe6070b048db88fcd955a files/emptyunscramble.xsl 405
 SHA256 4914ed84313cb534bd00dd824b81e6266d9a23fdfc4f95944678b7494d8c15e6 files/emptyunscramble.xsl 405
-DIST netbeans-5_5-ide_sources.tar.bz2 109745446 RMD160 075f33dbbc666ee00dc8b25281a43dcf49d84247 SHA1 255b863e41c23abc00678a228f881c697160bd2a SHA256 ee521fa4a4807cc41b567ff6bff6d927a61415a4246fd4e6cc24f511b5827999
-DIST netbeans-5_5-javadoc.tar.bz2 11345846 RMD160 745641defdb56f0e860e3c46f0275f3b44efe808 SHA1 64603756c56a216315d0598ea20bfcdc429598c2 SHA256 50851849d0121e5ffa36cd5e3b9c366d40f9e2cdce4b58f030bb6716e3438c33
 DIST netbeans-6_0-daily-docs-200610231800-javadoc-23_Oct_2006_1800.tar.bz2 25030422 RMD160 b0168cc6036c27d9ae1af0a88f4771be62887fb8 SHA1 48ace523619c6e278f377dca88743acb084da3b6 SHA256 1bd4344c13e6e7a4363516a954199da4b452f253c26dea6081fa2e10eeaafb46
 DIST netbeans-6_0-daily-src-200610231800-ide_sources-23_Oct_2006_1800.tar.bz2 123762213 RMD160 185670460414f7f117592da0deed7a0c9e57bbc2 SHA1 a237d610bbe5a51570f1e5ce50c41a9ce7107cd9 SHA256 5775cdaee54d0e9f3ba7c8ed90b5cef5f16c74594fb91f2d1e9bb64b37800a07
 DIST netbeans-6_0-daily-src-200611091900-ide_sources-9_Nov_2006_1900.tar.bz2 124191991 RMD160 c8481ee0a2a2a29935898d6c57698670dc6b4b5b SHA1 93331392aa461a6ca768ef31bf40ef8b45ccb01a SHA256 328275f0f903908c077f7f8d78515c6abf63329659d4445e4697579cdb4d75dd
-EBUILD netbeans-5.5-r1.ebuild 11873 RMD160 e6cd392e9b224089cc0946a99cf44ca2fe933ffc SHA1 ec77f21a2fec584b59b968194178cb805a870b65 SHA256 18759fc7fe9febb582ce36fc6a3e590678d828b8b69471807795dd9b0f1a7c87
-MD5 084a2ae7b96efd714fc8de982f758da3 netbeans-5.5-r1.ebuild 11873
-RMD160 e6cd392e9b224089cc0946a99cf44ca2fe933ffc netbeans-5.5-r1.ebuild 11873
-SHA256 18759fc7fe9febb582ce36fc6a3e590678d828b8b69471807795dd9b0f1a7c87 netbeans-5.5-r1.ebuild 11873
 EBUILD netbeans-6.0_alpha20061023.ebuild 15912 RMD160 65a8d0bdf4e70544dd64e09c95a0a5d10fc2d5d3 SHA1 288cd46b6eb5f08a38a1f420181c21d79e8e4a8a SHA256 c465168894e4afafe3dc61f8799014005fad07a431ad350202ca94b80f96df79
 MD5 282c5807ef0bcf318cf08e698fe60e52 netbeans-6.0_alpha20061023.ebuild 15912
 RMD160 65a8d0bdf4e70544dd64e09c95a0a5d10fc2d5d3 netbeans-6.0_alpha20061023.ebuild 15912
@@ -35,17 +25,14 @@ EBUILD netbeans-6.0_alpha20061109.ebuild 14963 RMD160 4e281364696ca2d6ad00513150
 MD5 6c36234a6285e1e6d41f78f787b90662 netbeans-6.0_alpha20061109.ebuild 14963
 RMD160 4e281364696ca2d6ad00513150dceb1d3f0e8540 netbeans-6.0_alpha20061109.ebuild 14963
 SHA256 a1fa6261dbf145eb0a83c750198c4400bfae0849d703467d87b389f85e3484af netbeans-6.0_alpha20061109.ebuild 14963
-MISC ChangeLog 7036 RMD160 54bd0783229e95841f8e1514c0321705eb7c18a9 SHA1 e5055537ab7838dff32989db6ed35aabbe2bc390 SHA256 85a63849c7224e58546c293d84954b8c7236dcb5b956a70a0c84d0ef0c58ee81
-MD5 ef8f7d02e79f29617a2df1a65666dd65 ChangeLog 7036
-RMD160 54bd0783229e95841f8e1514c0321705eb7c18a9 ChangeLog 7036
-SHA256 85a63849c7224e58546c293d84954b8c7236dcb5b956a70a0c84d0ef0c58ee81 ChangeLog 7036
+MISC ChangeLog 7178 RMD160 56eff2bd5d9487fcfb6ac06ac9fbd94579bc0544 SHA1 491488337f5804f6b05430e751cd78c173a51ad2 SHA256 b20363107dbf3454c1217379db6e3398e39ff416e122b6232994a2e08b73033c
+MD5 bd9a1092a4a31554b0189a31580cd112 ChangeLog 7178
+RMD160 56eff2bd5d9487fcfb6ac06ac9fbd94579bc0544 ChangeLog 7178
+SHA256 b20363107dbf3454c1217379db6e3398e39ff416e122b6232994a2e08b73033c ChangeLog 7178
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
 MD5 e7fcbf7f5131562425fda47afe3b39b9 metadata.xml 1128
 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd metadata.xml 1128
 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a metadata.xml 1128
-MD5 941a64540f925f5b9c672d7aab71fcb4 files/digest-netbeans-5.5-r1 557
-RMD160 8811d7450a173585439b243004eab0b615f505e8 files/digest-netbeans-5.5-r1 557
-SHA256 b47a0c7239e8eadf6723160c9c9a3e02fafffcaebee20d758da0359c27afd923 files/digest-netbeans-5.5-r1 557
 MD5 41745dcb5387aac35e780a6e65766373 files/digest-netbeans-6.0_alpha20061023 800
 RMD160 624f5f87cde04dbfefcec6c439eab43595b3ce4b files/digest-netbeans-6.0_alpha20061023 800
 SHA256 5d3bea52c5ba3e37231d9ee36efd76a3ad3ca2773a8644e423b51f46e9b6f246 files/digest-netbeans-6.0_alpha20061023 800
