@@ -1,6 +1,0 @@
-MD5 de16a300f772af6b7d29a9d8ddf5a043 netbeans-5_5-ide_sources.tar.bz2 109745446
-RMD160 075f33dbbc666ee00dc8b25281a43dcf49d84247 netbeans-5_5-ide_sources.tar.bz2 109745446
-SHA256 ee521fa4a4807cc41b567ff6bff6d927a61415a4246fd4e6cc24f511b5827999 netbeans-5_5-ide_sources.tar.bz2 109745446
-MD5 4adaf6574008cc05bc04585bdbcc887e netbeans-5_5-javadoc.tar.bz2 11345846
-RMD160 745641defdb56f0e860e3c46f0275f3b44efe808 netbeans-5_5-javadoc.tar.bz2 11345846
-SHA256 50851849d0121e5ffa36cd5e3b9c366d40f9e2cdce4b58f030bb6716e3438c33 netbeans-5_5-javadoc.tar.bz2 11345846
